--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,12 @@
     "target": "es2022",
     "sourceMap": true,
     "strict": true,
+    "declaration": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "nodenext",
-    "outDir": "./build",
+    "outDir": "./dist",
     "rootDir": "./src",
   },
   "files": ["node_modules/jest-expect-message/types/index.d.ts"],
