change folder structure and add initial tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,10 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "nodenext",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
+    "isolatedModules": true
   },
   "files": ["node_modules/jest-expect-message/types/index.d.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts"],
 }
