--- a/LLMint/package.json
+++ b/LLMint/package.json
@@ -2,10 +2,10 @@
   "name": "llmint",
   "version": "1.0.0",
   "description": "typescript library to use LLMs for common non-AI website content quality evaluations using LLMs understanding of semantics",
-  
   "main": "dist/index.js",
-	"files": ["dist"],
-  
+  "files": [
+    "dist/**"
+  ],
   "directories": {
     "test": "test"
   },
@@ -29,6 +29,7 @@
     "ai": "^4.3.16",
     "is-docker": "^3.0.0",
     "node-html-parser": "^7.0.1",
+    "stream-promise": "^3.2.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
